--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E4E4E4"
     tools:context=".LogActivity">
 
     <LinearLayout
@@ -27,7 +28,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/TxVw_email"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:textColor="@color/pplay_azul" />
 
         <Space
             android:layout_width="match_parent"
@@ -39,7 +41,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/TxVw_password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textColor="@color/pplay_azul" />
 
         <Space
             android:layout_width="match_parent"
@@ -72,5 +75,21 @@
                 android:text="@string/btn_acceder"
                 android:textColor="@android:color/white" />
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="8dp" />
+
+        <Button
+            android:id="@+id/googlebutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:drawableStart="@mipmap/google_icon"
+            android:padding="3dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="1dp"
+            android:text="@string/btn_google"
+            android:textAlignment="textStart" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
