--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -84,12 +84,14 @@
             android:id="@+id/googlebutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
             android:background="@android:color/white"
             android:drawableStart="@mipmap/google_icon"
             android:padding="3dp"
             android:paddingStart="8dp"
             android:paddingEnd="1dp"
-            android:text="@string/btn_google"
-            android:textAlignment="textStart" />
+            android:text="   Google"
+            android:textAlignment="viewStart" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
